--- a/src/blocks/modules/breadcrumbs/breadcrumbs-clinic.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-clinic.html
@@ -1,23 +1,20 @@
 <div class="breadcrumbs">
-    <div class="container-fluid">
-        <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__list_item">
-                <a href="#works" class="breadcrumbs__list_item_link">Наши работы</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#reviews" class="breadcrumbs__list_item_link">Отзывы</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#news" class="breadcrumbs__list_item_link">Новости, новинки, статьи</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#licenses" class="breadcrumbs__list_item_link">Лицензии и сертификаты</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#guarantees" class="breadcrumbs__list_item_link">Гарантии</a>
-            </li>
-        </ul>
-    </div>
-    <!-- /.container-fluid -->
+    <ul class="breadcrumbs__list">
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#works">Наши работы</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#reviews">Отзывы</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#news">Новости, новинки, статьи</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#licenses">Лицензии и сертификаты</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#guarantees">Гарантии</a>
+        </li>
+    </ul>
 </div>
 <!-- /.breadcrumbs -->
