--- a/src/blocks/modules/breadcrumbs/breadcrumbs-services.html
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs-services.html
@@ -1,17 +1,14 @@
 <div class="breadcrumbs">
-    <div class="container-fluid">
-        <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__list_item">
-                <a href="#services-1" class="breadcrumbs__list_item_link">Эстетические реставрации</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#services-4" class="breadcrumbs__list_item_link">Вкладка</a>
-            </li>
-            <li class="breadcrumbs__list_item">
-                <a href="#services-8" class="breadcrumbs__list_item_link">Керамические виниры</a>
-            </li>
-        </ul>
-    </div>
-    <!-- /.container-fluid -->
+    <ul class="breadcrumbs__list">
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#services-1">Эстетические реставрации</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#services-4">Вкладка</a>
+        </li>
+        <li class="breadcrumbs__list_item">
+            <a class="breadcrumbs__list_item_link" href="#services-8">Керамические виниры</a>
+        </li>
+    </ul>
 </div>
 <!-- /.breadcrumbs -->
