--- a/src/blocks/modules/guarantees/guarantees.html
+++ b/src/blocks/modules/guarantees/guarantees.html
@@ -1,165 +1,171 @@
 <div class="guarantees" id="guarantees">
 
-    <div class="container-small">
-
-        <div class="title-block title-1 bg-blue color-white">Гарантии</div>
-
-        <div class="title-2 text-center">
-            <div class="color-blue">ПОЛОЖЕНИЕ</div>
-            о средних гарантийных сроках и сроках службы на стоматологические услуги
-        </div>
-
-        <p class="mb-5">
-            На большинство работ (услуг) по оказанию стоматологической помощи в клинике "ДАНТИСТ" установлены средние
-            гарантийные сроки и сроки службы
-            <a href="#" class="link link-blue color-blue">(см. таблицу)</a>
-        </p>
-
-        <div class="column-2 mb-md-3">
-
-            <p class="mb-4">
-                <span class="bold">Конкретные гарантийные сроки и сроки службы</span> на выполненные стоматологические
-                работы (услуги) для каждого
-                пациента устанавливаются врачом в зависимости от:
-            </p>
-
-            <p class="text-icon mb-4">
-                <span class="text-icon-img title-2 color-blue">1</span>
-                <span class="d-inline-block pt-1">клинической ситуации в полости рта;</span>
-            </p>
-
-            <p class="text-icon mb-4">
-                <span class="text-icon-img title-2 color-blue">2</span>
-                наличия или отсутствия сопутствующих заболеваний, которые напрямую или косвенно приводят к изменению в
-                зубочелюстной системе.
-            </p>
-
-            <p class="text-icon mb-4">
-                <span class="text-icon-img title-2 color-blue">3</span>
-                полноты выполнения пациентом плана лечения, рекомендованного врачом.
-            </p>
-
-            <p class="mb-4">
-                С учетом указанных обстоятельств в конкретном случае гарантийные сроки и сроки службы могут быть
-                уменьшены или увеличены по сравнению со средними, что фиксируется врачом в гарантийном талоне.
-            </p>
-
-            <p class="mb-4">
-                При обнаружении в период установленного гарантийного и срока и срока службы недостатков выполненной
-                работы (оказанной услуги), пациент должен обратиться только в данную клинику. Если эти недостатки не
-                связаны с нарушениями пациентом предварительно сообщенными ему условиями сохранения гарантий, клиника
-                безвозмездно устранит эти недостатки или повторно выполнит работу (услугу).
-            </p>
-
-        </div>
-        <!-- /.column-2 -->
-
-        <div class="note justify-content-center text-center mb-5">
-            При несоблюдении пациентом условий, оговоренных в пункте 2.1.5. договора, <br>
-            претензии по гарантиям не принимаются.
-        </div>
-
-        <p class="mb-5">
-            Гарантийные сроки и сроки службы на отдельные виды работ (услуг) ввиду их специфики установить <br>
-            <span class="bold">не представляется возможным. К их числу относятся:</span>
-        </p>
-
-        <div class="row mb-5">
-
-            <div class="col-md-6">
-                <p class="text-icon mb-4">
-                <span class="text-icon-img">
-                    <span class="text-check check-blue"></span>
-                </span>
-                    Обработка и пломбирование корневых каналов (эндодонтическое лечение)
-                </p>
-
-                <p class="text-icon mb-4">
-                <span class="text-icon-img">
-                    <span class="text-check check-blue"></span>
-                </span>
-                    Профессиональная гигиеническая обработка полости рта.
-                </p>
-
-                <p class="text-icon mb-4">
-                <span class="text-icon-img">
-                    <span class="text-check check-blue"></span>
-                </span>
-                    Наложение повязки (временной пломбы). Амбулаторные хирургические операции (резекция верхушки корня,
-                    удаление зуба, постановка зубного имплантанта и др.).
-                </p>
-            </div>
-
-            <div class="col-md-6">
-                <p class="text-icon mb-4">
-                <span class="text-icon-img">
-                    <span class="text-check check-blue"></span>
-                </span>
-                    Лечение заболеваний пародонта (воспаление десны и окружающих зуб тканей).
-                </p>
-
-                <p class="text-icon mb-4">
-                <span class="text-icon-img">
-                    <span class="text-check check-blue"></span>
-                </span>
-                    Отбеливание зубов.
-                </p>
-            </div>
-
-        </div>
-        <!-- /.column-2 -->
-
-        <p class="mb-4">
-            Тем не менее в случаях, когда ввиду специфики отдельных видов работ не возможно определить конкретные
-            гарантийные сроки и сроки службы, мы гарантируем следующее
-        </p>
-
+    <div class="container-fluid">
         <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-            <div class="col-md-6 order-md-1 mb-3">
-                <div class="note">При обработке и пломбировании корневых каналов</div>
-            </div>
+                    <div class="title-block title-1 bg-blue color-white">Гарантии</div>
 
-            <div class="col-md-6 order-md-3 mb-3">
-                <p>
-                    Опыт нашей фирмы показывает, что при лечении каналов благоприятный результат достигается в 90 % случаев.
-                </p>
-                <p>
-                    Следует учесть, что результат лечения в каждом конкретном случае зависит не только от его качества, но и от общей реакции Вашего организма и состояния зубов.
-                </p>
-            </div>
+                    <div class="title-2 text-center">
+                        <div class="color-blue">ПОЛОЖЕНИЕ</div>
+                        о средних гарантийных сроках и сроках службы на стоматологические услуги
+                    </div>
 
-            <div class="col-md-6 order-md-2 mb-3">
-                <div class="note">При удалении зуба</div>
-            </div>
+                    <p class="mb-5">
+                        На большинство работ (услуг) по оказанию стоматологической помощи в клинике "ДАНТИСТ" установлены средние
+                        гарантийные сроки и сроки службы
+                        <a href="#" class="link link-blue color-blue">(см. таблицу)</a>
+                    </p>
 
-            <div class="col-md-6 order-md-4 mb-3">
-                <p>
-                    <span class="bold">Мы гарантируем, что во всех случаях удаление зуба произойдет:</span>
-                </p>
-                <p>
-                    -  безболезненно;
-                </p>
-                <p>
-                    -  с адекватным хирургическим вмешательством.
-                </p>
-                <p>
+                    <div class="column-2 mb-md-3">
+
+                        <p class="mb-4">
+                            <span class="bold">Конкретные гарантийные сроки и сроки службы</span> на выполненные стоматологические
+                            работы (услуги) для каждого
+                            пациента устанавливаются врачом в зависимости от:
+                        </p>
+
+                        <p class="text-icon mb-4">
+                            <span class="text-icon-img title-2 color-blue">1</span>
+                            <span class="d-inline-block pt-1">клинической ситуации в полости рта;</span>
+                        </p>
+
+                        <p class="text-icon mb-4">
+                            <span class="text-icon-img title-2 color-blue">2</span>
+                            наличия или отсутствия сопутствующих заболеваний, которые напрямую или косвенно приводят к изменению в
+                            зубочелюстной системе.
+                        </p>
+
+                        <p class="text-icon mb-4">
+                            <span class="text-icon-img title-2 color-blue">3</span>
+                            полноты выполнения пациентом плана лечения, рекомендованного врачом.
+                        </p>
+
+                        <p class="mb-4">
+                            С учетом указанных обстоятельств в конкретном случае гарантийные сроки и сроки службы могут быть
+                            уменьшены или увеличены по сравнению со средними, что фиксируется врачом в гарантийном талоне.
+                        </p>
+
+                        <p class="mb-4">
+                            При обнаружении в период установленного гарантийного и срока и срока службы недостатков выполненной
+                            работы (оказанной услуги), пациент должен обратиться только в данную клинику. Если эти недостатки не
+                            связаны с нарушениями пациентом предварительно сообщенными ему условиями сохранения гарантий, клиника
+                            безвозмездно устранит эти недостатки или повторно выполнит работу (услугу).
+                        </p>
+
+                    </div>
+                    <!-- /.column-2 -->
+
+                    <div class="note justify-content-center text-center mb-5">
+                        При несоблюдении пациентом условий, оговоренных в пункте 2.1.5. договора, <br>
+                        претензии по гарантиям не принимаются.
+                    </div>
+
+                    <p class="mb-5">
+                        Гарантийные сроки и сроки службы на отдельные виды работ (услуг) ввиду их специфики установить <br>
+                        <span class="bold">не представляется возможным. К их числу относятся:</span>
+                    </p>
+
+                    <div class="row mb-5">
+
+                        <div class="col-md-6">
+                            <p class="text-icon mb-4">
+                <span class="text-icon-img">
+                    <span class="text-check check-blue"></span>
+                </span>
+                                Обработка и пломбирование корневых каналов (эндодонтическое лечение)
+                            </p>
+
+                            <p class="text-icon mb-4">
+                <span class="text-icon-img">
+                    <span class="text-check check-blue"></span>
+                </span>
+                                Профессиональная гигиеническая обработка полости рта.
+                            </p>
+
+                            <p class="text-icon mb-4">
+                <span class="text-icon-img">
+                    <span class="text-check check-blue"></span>
+                </span>
+                                Наложение повязки (временной пломбы). Амбулаторные хирургические операции (резекция верхушки корня,
+                                удаление зуба, постановка зубного имплантанта и др.).
+                            </p>
+                        </div>
+
+                        <div class="col-md-6">
+                            <p class="text-icon mb-4">
+                <span class="text-icon-img">
+                    <span class="text-check check-blue"></span>
+                </span>
+                                Лечение заболеваний пародонта (воспаление десны и окружающих зуб тканей).
+                            </p>
+
+                            <p class="text-icon mb-4">
+                <span class="text-icon-img">
+                    <span class="text-check check-blue"></span>
+                </span>
+                                Отбеливание зубов.
+                            </p>
+                        </div>
+
+                    </div>
+                    <!-- /.column-2 -->
+
+                    <p class="mb-4">
+                        Тем не менее в случаях, когда ввиду специфики отдельных видов работ не возможно определить конкретные
+                        гарантийные сроки и сроки службы, мы гарантируем следующее
+                    </p>
+
+                    <div class="row">
+
+                        <div class="col-md-6 order-md-1 mb-3">
+                            <div class="note">При обработке и пломбировании корневых каналов</div>
+                        </div>
+
+                        <div class="col-md-6 order-md-3 mb-3">
+                            <p>
+                                Опыт нашей фирмы показывает, что при лечении каналов благоприятный результат достигается в 90 % случаев.
+                            </p>
+                            <p>
+                                Следует учесть, что результат лечения в каждом конкретном случае зависит не только от его качества, но и от общей реакции Вашего организма и состояния зубов.
+                            </p>
+                        </div>
+
+                        <div class="col-md-6 order-md-2 mb-3">
+                            <div class="note">При удалении зуба</div>
+                        </div>
+
+                        <div class="col-md-6 order-md-4 mb-3">
+                            <p>
+                                <span class="bold">Мы гарантируем, что во всех случаях удаление зуба произойдет:</span>
+                            </p>
+                            <p>
+                                -  безболезненно;
+                            </p>
+                            <p>
+                                -  с адекватным хирургическим вмешательством.
+                            </p>
+                            <p>
                     <span class="bold">
                         Мы  также  гарантируем  бесплатное  устранение   возможных  осложнений  в послеоперационный период:
                     </span>
-                </p>
-                <p>-  воспаление;</p>
-                <p>-  кровотечение;</p>
-                <p>-  отек;</p>
-                <p>-  боль.</p>
+                            </p>
+                            <p>-  воспаление;</p>
+                            <p>-  кровотечение;</p>
+                            <p>-  отек;</p>
+                            <p>-  боль.</p>
+                        </div>
+
+                    </div>
+
+                </div>
+                <!-- /.container-small -->
+
+                @@include("../guarantees-table/guarantees-table.html")
             </div>
-
         </div>
-
     </div>
-    <!-- /.container-small -->
-
-    @@include("../guarantees-table/guarantees-table.html")
 
 </div>
 <!-- /.guarantees -->
