--- a/src/blocks/modules/home-1/home-1.html
+++ b/src/blocks/modules/home-1/home-1.html
@@ -2,59 +2,65 @@
 
     <div class="overflow-red"></div>
 
-    <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-        <div class="title-1 cards__title color-white">И почему я не пошел лечить зубы раньше?</div>
+                    <div class="title-1 cards__title color-white">И почему я не пошел лечить зубы раньше?</div>
 
-        <div class="row cards__slider">
+                    <div class="row cards__slider">
 
-            <div class="col-md-4">
+                        <div class="col-md-4">
 
-                <div class="cards__item cards-1 cards__top">
-                    <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
-                    У меня совсем нет времени, на работе завал. Схожу, когда буду посвободнее
+                            <div class="cards__item cards-1 cards__top">
+                                <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
+                                У меня совсем нет времени, на работе завал. Схожу, когда буду посвободнее
+                            </div>
+
+                            <div class="cards__item cards-1 cards__bot">
+                                <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
+                                Я так долго откладывал, что теперь мне стыдно за мои зубы.
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-1 cards__top">
+                                <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
+                                Сейчас нет денег. Запишусь как накоплю
+                            </div>
+
+                            <div class="cards__item cards-1 cards__bot">
+                                <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
+                                Это страх! Не могу себя заставить. Просто боюсь и всё!
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-1 cards__top">
+                                <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
+                                Не выношу эту боль, эти звуку, а ещё этот запах паленых зубов!
+                            </div>
+
+                            <div class="cards__item cards-1 cards__bot">
+                                <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
+                                Сейчас так много клиник. Как понять какая хорошая?!
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- /.row -->
+
                 </div>
-
-                <div class="cards__item cards-1 cards__bot">
-                    <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
-                    Я так долго откладывал, что теперь мне стыдно за мои зубы.
-                </div>
-
+                <!-- /.container-small -->
             </div>
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-1 cards__top">
-                    <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
-                    Сейчас нет денег. Запишусь как накоплю
-                </div>
-
-                <div class="cards__item cards-1 cards__bot">
-                    <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
-                    Это страх! Не могу себя заставить. Просто боюсь и всё!
-                </div>
-
-            </div>
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-1 cards__top">
-                    <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
-                    Не выношу эту боль, эти звуку, а ещё этот запах паленых зубов!
-                </div>
-
-                <div class="cards__item cards-1 cards__bot">
-                    <img class="cards-1__quote" src="../../../img/icons/quote.png" alt="">
-                    Сейчас так много клиник. Как понять какая хорошая?!
-                </div>
-
-            </div>
-
         </div>
-        <!-- /.row -->
-
     </div>
-    <!-- /.container-small -->
 
 </div>
 <!-- /.home-1 -->
