--- a/src/blocks/modules/home-2/home-2.html
+++ b/src/blocks/modules/home-2/home-2.html
@@ -1,53 +1,59 @@
 <div class="home-2" id="home-2">
 
-    <div class="container-small">
-
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
-                <div class="title-1 color-red">Что же делать?</div>
-            </div>
-            <div class="col-lg-6 mb-lg-5">
-                <p>
-                    Объявляйте войну страху, а мы поможем его побороть. Независимо от того, какие услуги Вам нужны:
-                    профессиональная чистка зубов, лечение, удаление или протезирование.
-                </p>
-            </div>
-            <div class="col-lg-6 mb-lg-5">
-                <div class="title-5">
-                    Мы предлагаем Вам сделать 2 простых шага на пути к здоровой улыбке.
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
+
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="title-1 color-red">Что же делать?</div>
+                        </div>
+                        <div class="col-lg-6 mb-lg-5">
+                            <p>
+                                Объявляйте войну страху, а мы поможем его побороть. Независимо от того, какие услуги Вам нужны:
+                                профессиональная чистка зубов, лечение, удаление или протезирование.
+                            </p>
+                        </div>
+                        <div class="col-lg-6 mb-lg-5">
+                            <div class="title-5">
+                                Мы предлагаем Вам сделать 2 простых шага на пути к здоровой улыбке.
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="title-2 color-red">Шаг 1: Приходите на консультацию</div>
+                        </div>
+                        <div class="col-12 mb-lg-5 column-2">
+                            <p>
+                                Вы просто поговорите со специалистом. Врач проводит осмотр, составляет план лечения и примерную
+                                стоимость. Всё, неизвестность в прошлом.
+                            </p>
+                            <p>
+                                Далее Вы узнаёте, как избавиться от боли. Какие современные обезболивающие препараты мы используем.
+                                Узнаёте, что действие обезболивающих снижается, если перед визитом Вы употребляли алкоголь,
+                                переволновались, не отдохнули или не выспались. Откроем секрет, на самом деле, докторам
+                                стоматологической клиники «Дантист» очень удобно работать, когда Вам совсем не больно, когда Вы
+                                спокойны и расслаблены в кресле. Стыдитесь, что запустили зубы? Откроем еще одну тайну: стоматологам
+                                интереснее именно запущенные зубы. Тут есть, где применить свои профессиональные знания и
+                                мастерство.
+                            </p>
+                            <p>
+                                После приема Вы чувствуете уверенность и понимаете, что это Ваш доктор.
+                            </p>
+                        </div>
+                        <div class="col-12"></div>
+                        <div class="col-12">
+                            <div class="title-5">
+                                Дальше все просто — запись к специалисту и долгожданное избавление от зубных проблем.
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-            </div>
-            <div class="col-12">
-                <div class="title-2 color-red">Шаг 1: Приходите на консультацию</div>
-            </div>
-            <div class="col-12 mb-lg-5 column-2">
-                <p>
-                    Вы просто поговорите со специалистом. Врач проводит осмотр, составляет план лечения и примерную
-                    стоимость. Всё, неизвестность в прошлом.
-                </p>
-                <p>
-                    Далее Вы узнаёте, как избавиться от боли. Какие современные обезболивающие препараты мы используем.
-                    Узнаёте, что действие обезболивающих снижается, если перед визитом Вы употребляли алкоголь,
-                    переволновались, не отдохнули или не выспались. Откроем секрет, на самом деле, докторам
-                    стоматологической клиники «Дантист» очень удобно работать, когда Вам совсем не больно, когда Вы
-                    спокойны и расслаблены в кресле. Стыдитесь, что запустили зубы? Откроем еще одну тайну: стоматологам
-                    интереснее именно запущенные зубы. Тут есть, где применить свои профессиональные знания и
-                    мастерство.
-                </p>
-                <p>
-                    После приема Вы чувствуете уверенность и понимаете, что это Ваш доктор.
-                </p>
-            </div>
-            <div class="col-12"></div>
-            <div class="col-12">
-                <div class="title-5">
-                    Дальше все просто — запись к специалисту и долгожданное избавление от зубных проблем.
-                </div>
+                <!-- /.container-small -->
             </div>
         </div>
-
     </div>
-    <!-- /.container-small -->
 
 </div>
 <!-- /.home-2 -->
