--- a/src/blocks/modules/home-5/home-5.html
+++ b/src/blocks/modules/home-5/home-5.html
@@ -1,31 +1,37 @@
 <div class="home-5" id="home-5">
 
-    <div class="container-small">
-
-        <div class="title-block title-1 bg-blue color-white">Лечить сейчас, платить завтра</div>
-
+    <div class="container-fluid">
         <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-            <div class="col-lg-6">
-                <p>
-                    Что делать, если стоимость лечения или протезирования для Вас слишком высока? Клиника «Дантист» и банки-партнеры предоставляют возможность взять кредит.
-                </p>
-                <p>
-                    Лечите зубы сейчас, а платите потом!
-                </p>
-            </div>
+                    <div class="title-block title-1 bg-blue color-white">Лечить сейчас, платить завтра</div>
 
-            <div class="col-lg-6">
-                <div class="title-5">
-                    В случае с зубами выйдет дешевле, чем ждать и копить.
+                    <div class="row">
+
+                        <div class="col-lg-6">
+                            <p>
+                                Что делать, если стоимость лечения или протезирования для Вас слишком высока? Клиника «Дантист» и банки-партнеры предоставляют возможность взять кредит.
+                            </p>
+                            <p>
+                                Лечите зубы сейчас, а платите потом!
+                            </p>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <div class="title-5">
+                                В случае с зубами выйдет дешевле, чем ждать и копить.
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- /.row -->
+
                 </div>
+                <!-- /.container-small -->
             </div>
-
         </div>
-        <!-- /.row -->
-
     </div>
-    <!-- /.container-small -->
 
 </div>
 <!-- /.home-5 -->
