--- a/src/blocks/modules/home-6/home-6.html
+++ b/src/blocks/modules/home-6/home-6.html
@@ -2,71 +2,77 @@
 
     <div class="overflow-red"></div>
 
-    <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-        <div class="title-1 cards__title color-white">И почему я не пошел лечить зубы раньше?</div>
+                    <div class="title-1 cards__title color-white">И почему я не пошел лечить зубы раньше?</div>
 
-        <div class="row cards__slider">
+                    <div class="row cards__slider">
 
-            <div class="col-md-4">
+                        <div class="col-md-4">
 
-                <div class="cards__item cards-2 cards__top">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-6__icon-1.svg" alt="">
+                            <div class="cards__item cards-2 cards__top">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-6__icon-1.svg" alt="">
+                                </div>
+                                <div class="cards__text">Терпевтическая стоматология</div>
+                            </div>
+
+                            <div class="cards__item cards-2 cards__bot">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-6__icon-2.svg" alt="">
+                                </div>
+                                <div class="cards__text">Ортопедическая стоматология</div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-2 cards__top">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-6__icon-3.svg" alt="">
+                                </div>
+                                <div class="cards__text">Хирургическая стоматология</div>
+                            </div>
+
+                            <div class="cards__item cards-2 cards__bot">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-6__icon-4.svg" alt="">
+                                </div>
+                                <div class="cards__text">Отбеливание зубов</div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-2 cards__top">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-6__icon-5.svg" alt="">
+                                </div>
+                                <div class="cards__text">Имплантология</div>
+                            </div>
+
+                            <div class="cards__item cards-2 cards__bot">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-6__icon-6.svg" alt="">
+                                </div>
+                                <div class="cards__text">Отбеливание зубов</div>
+                            </div>
+
+                        </div>
+
                     </div>
-                    <div class="cards__text">Терпевтическая стоматология</div>
-                </div>
+                    <!-- /.row -->
 
-                <div class="cards__item cards-2 cards__bot">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-6__icon-2.svg" alt="">
-                    </div>
-                    <div class="cards__text">Ортопедическая стоматология</div>
                 </div>
-
+                <!-- /.container-small -->
             </div>
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-2 cards__top">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-6__icon-3.svg" alt="">
-                    </div>
-                    <div class="cards__text">Хирургическая стоматология</div>
-                </div>
-
-                <div class="cards__item cards-2 cards__bot">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-6__icon-4.svg" alt="">
-                    </div>
-                    <div class="cards__text">Отбеливание зубов</div>
-                </div>
-
-            </div>
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-2 cards__top">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-6__icon-5.svg" alt="">
-                    </div>
-                    <div class="cards__text">Имплантология</div>
-                </div>
-
-                <div class="cards__item cards-2 cards__bot">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-6__icon-6.svg" alt="">
-                    </div>
-                    <div class="cards__text">Отбеливание зубов</div>
-                </div>
-
-            </div>
-
         </div>
-        <!-- /.row -->
-
     </div>
-    <!-- /.container-small -->
 
 </div>
 <!-- /.home-6 -->
