--- a/src/blocks/modules/home-7/home-7.html
+++ b/src/blocks/modules/home-7/home-7.html
@@ -1,47 +1,53 @@
 <div class="home-7">
-    <div class="container">
-        <div class="form__block">
-            <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container">
+                    <div class="form__block">
+                        <div class="container-small">
 
-                <div class="title-1 color-red">Задайте вопрос или запишитесь</div>
+                            <div class="title-1 color-red">Задайте вопрос или запишитесь</div>
 
-                <form>
-                    <div class="row">
-                        <div class="col-md-6 col-xl-4 mb-4">
-                            <label class="form-label" for="home7Name">Введите Ваше имя:</label>
-                            <input type="text" class="form-control" id="home7Name"
-                                   placeholder="Василий Петров" required>
+                            <form>
+                                <div class="row">
+                                    <div class="col-md-6 col-xl-4 mb-4">
+                                        <label class="form-label" for="home7Name">Введите Ваше имя:</label>
+                                        <input type="text" class="form-control" id="home7Name"
+                                               placeholder="Василий Петров" required>
+                                    </div>
+                                    <div class="col-md-6 col-xl-4 mb-4">
+                                        <label class="form-label" for="home7Phone">Телефон:</label>
+                                        <input type="tel" class="form-control" id="home7Phone"
+                                               placeholder="+7 (___) ___-____" required>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6 col-xl-4">
+                                        <div class="custom-control custom-checkbox mb-4">
+                                            <input type="checkbox" class="custom-control-input" id="home7Accept"
+                                                   required>
+                                            <label class="custom-control-label" for="home7Accept">
+                                                Согласен на обработку персональных данных и с политикой конфиденциальности
+                                            </label>
+
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-xl-4">
+                                        <div class="form-btn">
+                                            <button class="btn-2 btn-red" type="submit">Отправить</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+
                         </div>
-                        <div class="col-md-6 col-xl-4 mb-4">
-                            <label class="form-label" for="home7Phone">Телефон:</label>
-                            <input type="tel" class="form-control" id="home7Phone"
-                                   placeholder="+7 (___) ___-____" required>
-                        </div>
+                        <!-- /.container-small -->
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 col-xl-4">
-                            <div class="custom-control custom-checkbox mb-4">
-                                <input type="checkbox" class="custom-control-input" id="home7Accept"
-                                       required>
-                                <label class="custom-control-label" for="home7Accept">
-                                    Согласен на обработку персональных данных и с политикой конфиденциальности
-                                </label>
-
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-4">
-                            <div class="form-btn">
-                                <button class="btn-2 btn-red" type="submit">Отправить</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-
+                    <!-- /.form__block -->
+                </div>
+                <!-- /.container -->
             </div>
-            <!-- /.container-small -->
         </div>
-        <!-- /.form__block -->
     </div>
-    <!-- /.container -->
 </div>
 <!-- /.home-7 -->
