--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -7,7 +7,7 @@
     </div>
     <div class="container-small">
         <div class="row">
-            <div class="col-lg-6 offset-lg-4">
+            <div class="col-lg-6 offset-lg-3 offset-xl-4">
                 <div class="title-1 color-blue">«Дантист» — моя стоматология в Кирове</div>
                 <p>
                     Представьте, что все страхи и мучения остались позади.
