--- a/src/blocks/modules/reviews/reviews.html
+++ b/src/blocks/modules/reviews/reviews.html
@@ -1,141 +1,161 @@
 <div class="reviews" id="reviews">
-    <div class="container-small">
-
-        <div class="title-block title-1 color-white bg-red">Отзывы</div>
-        <div class="title-1 color-red">Как найти настоящие отзывы о компании?</div>
-        <p>
-            Попробуйте посмотреть на независимых порталах:
-            <a href="/" class="link link-red color-red">rodoctorov.ru</a>,
-            <a href="/" class="link link-red color-red">otzovik.com</a>
-        </p>
-
-        <div class="reviews__slider">
-            <div class="reviews__slider_item">
-                <div class="reviews__slider_item_box">
-                    <div class="reviews__slider_item_head">
-                        <div class="title-6">Скрытый</div>
-                        <div class="color-grey">09.11.2015</div>
-                    </div>
-                    <div class="reviews__slider_item_body">
-                        <p>
-                            В эту клинику я пришла по рекомендации и хорошим отзывам моей коллеги по работе. Весь
-                            коллектив
-                            показался мне очень приветливым и доброжелательным. Я очень довольна результатом лечения и
-                            профессиональным подходом доктора. Сразу чувствуется, что доктор знает и любит свое дело.
-                            Мне
-                            вылечили кариес и удалили зубы мудрости быстро и безболезненно. А также я осталась довольна
-                            стоимостью услуг, она мне показалась вполне приемлемой, еще очень порадовала первичная
-                            бесплатная консультация.
-                        </p>
-                    </div>
-                    <div class="reviews__slider_item_footer">
-                        <a href="/" class="link link-red color-red">Ссылка</a> на отзыв
-                    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
+                    <div class="title-block title-1 color-white bg-red">Отзывы</div>
+                    <div class="title-1 color-red">Как найти настоящие отзывы о компании?</div>
+                    <p>
+                        Попробуйте посмотреть на независимых порталах:
+                        <a href="/" class="link link-red color-red">rodoctorov.ru</a>,
+                        <a href="/" class="link link-red color-red">otzovik.com</a>
+                    </p>
                 </div>
-            </div>
-            <div class="reviews__slider_item">
-                <div class="reviews__slider_item_box">
-                    <div class="reviews__slider_item_head">
-                        <div class="title-6">Скрытый</div>
-                        <div class="color-grey">09.11.2015</div>
-                    </div>
-                    <div class="reviews__slider_item_body">
-                        <p>
-                            В эту клинику я пришла по рекомендации и хорошим отзывам моей коллеги по работе. Весь
-                            коллектив
-                            показался мне очень приветливым и доброжелательным. Я очень довольна результатом лечения и
-                            профессиональным подходом доктора. Сразу чувствуется, что доктор знает и любит свое дело.
-                            Мне
-                            вылечили кариес и удалили зубы мудрости быстро и безболезненно. А также я осталась довольна
-                            стоимостью услуг, она мне показалась вполне приемлемой, еще очень порадовала первичная
-                            бесплатная консультация.
-                        </p>
-                    </div>
-                    <div class="reviews__slider_item_footer">
-                        <a href="/" class="link link-red color-red">Ссылка</a> на отзыв
-                    </div>
-                </div>
-            </div>
-            <div class="reviews__slider_item">
-                <div class="reviews__slider_item_box">
-                    <div class="reviews__slider_item_head">
-                        <div class="title-6">Скрытый</div>
-                        <div class="color-grey">09.11.2015</div>
-                    </div>
-                    <div class="reviews__slider_item_body">
-                        <p>
-                            В эту клинику я пришла по рекомендации и хорошим отзывам моей коллеги по работе. Весь
-                            коллектив
-                            показался мне очень приветливым и доброжелательным. Я очень довольна результатом лечения и
-                            профессиональным подходом доктора. Сразу чувствуется, что доктор знает и любит свое дело.
-                            Мне
-                            вылечили кариес и удалили зубы мудрости быстро и безболезненно. А также я осталась довольна
-                            стоимостью услуг, она мне показалась вполне приемлемой, еще очень порадовала первичная
-                            бесплатная консультация.
-                        </p>
-                    </div>
-                    <div class="reviews__slider_item_footer">
-                        <a href="/" class="link link-red color-red">Ссылка</a> на отзыв
-                    </div>
-                </div>
+                <!-- /.container-small -->
             </div>
         </div>
-        <!-- /.reviews__slider -->
-
-        <div class="team__slider_appointment">
-            <div class="team__slider_appointment_title title-1 color-red">
-                Оставить отзыв
-            </div>
-
-            <form>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="row">
-                            <div class="col-12 mb-4">
-                                <label class="form-label" for="reviewsSliderName">Введите Ваше имя:</label>
-                                <input type="text" class="form-control" id="reviewsSliderName"
-                                       placeholder="Василий Петров" required="" tabindex="0">
-                            </div>
-                            <div class="col-12 mb-4">
-                                <label class="form-label" for="reviewsSliderEmail">Email:</label>
-                                <input type="email" class="form-control" id="reviewsSliderEmail"
-                                       placeholder="123@mail.ru" required="" tabindex="0">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-4">
-                        <div class="label-box">
-                            <label class="form-label" for="reviewsSliderText">Текст отзыва:</label>
-                            <label class="form-file">
-                                <input type="file">
-                                <span class="link link-grey color-grey">Прикрепить файл</span>
-                            </label>
-                        </div>
-                        <textarea class="form-control" id="reviewsSliderText"></textarea>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <div class="custom-control custom-checkbox mb-4">
-                                <input type="checkbox" class="custom-control-input" id="teamAppointmentAccept-1"
-                                       required="" tabindex="0">
-                                <label class="custom-control-label" for="teamAppointmentAccept-1">
-                                    Согласен на обработку персональных данных и с политикой конфиденциальности
-                                </label>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-btn">
-                            <button class="btn-2 btn-red" type="submit" tabindex="0">Отправить</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
-        </div>
-
     </div>
-    <!-- /.container-small -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-8 offset-xl-3">
+                <div class="container-small">
+                    <div class="reviews__slider">
+                        <div class="reviews__slider_item">
+                            <div class="reviews__slider_item_box">
+                                <div class="reviews__slider_item_head">
+                                    <div class="title-6">Скрытый</div>
+                                    <div class="color-grey">09.11.2015</div>
+                                </div>
+                                <div class="reviews__slider_item_body">
+                                    <p>
+                                        В эту клинику я пришла по рекомендации и хорошим отзывам моей коллеги по работе. Весь
+                                        коллектив
+                                        показался мне очень приветливым и доброжелательным. Я очень довольна результатом лечения и
+                                        профессиональным подходом доктора. Сразу чувствуется, что доктор знает и любит свое дело.
+                                        Мне
+                                        вылечили кариес и удалили зубы мудрости быстро и безболезненно. А также я осталась довольна
+                                        стоимостью услуг, она мне показалась вполне приемлемой, еще очень порадовала первичная
+                                        бесплатная консультация.
+                                    </p>
+                                </div>
+                                <div class="reviews__slider_item_footer">
+                                    <a href="/" class="link link-red color-red">Ссылка</a> на отзыв
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews__slider_item">
+                            <div class="reviews__slider_item_box">
+                                <div class="reviews__slider_item_head">
+                                    <div class="title-6">Скрытый</div>
+                                    <div class="color-grey">09.11.2015</div>
+                                </div>
+                                <div class="reviews__slider_item_body">
+                                    <p>
+                                        В эту клинику я пришла по рекомендации и хорошим отзывам моей коллеги по работе. Весь
+                                        коллектив
+                                        показался мне очень приветливым и доброжелательным. Я очень довольна результатом лечения и
+                                        профессиональным подходом доктора. Сразу чувствуется, что доктор знает и любит свое дело.
+                                        Мне
+                                        вылечили кариес и удалили зубы мудрости быстро и безболезненно. А также я осталась довольна
+                                        стоимостью услуг, она мне показалась вполне приемлемой, еще очень порадовала первичная
+                                        бесплатная консультация.
+                                    </p>
+                                </div>
+                                <div class="reviews__slider_item_footer">
+                                    <a href="/" class="link link-red color-red">Ссылка</a> на отзыв
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews__slider_item">
+                            <div class="reviews__slider_item_box">
+                                <div class="reviews__slider_item_head">
+                                    <div class="title-6">Скрытый</div>
+                                    <div class="color-grey">09.11.2015</div>
+                                </div>
+                                <div class="reviews__slider_item_body">
+                                    <p>
+                                        В эту клинику я пришла по рекомендации и хорошим отзывам моей коллеги по работе. Весь
+                                        коллектив
+                                        показался мне очень приветливым и доброжелательным. Я очень довольна результатом лечения и
+                                        профессиональным подходом доктора. Сразу чувствуется, что доктор знает и любит свое дело.
+                                        Мне
+                                        вылечили кариес и удалили зубы мудрости быстро и безболезненно. А также я осталась довольна
+                                        стоимостью услуг, она мне показалась вполне приемлемой, еще очень порадовала первичная
+                                        бесплатная консультация.
+                                    </p>
+                                </div>
+                                <div class="reviews__slider_item_footer">
+                                    <a href="/" class="link link-red color-red">Ссылка</a> на отзыв
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.reviews__slider -->
+                </div>
+                <!-- /.container-small -->
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
+                    <div class="team__slider_appointment">
+                        <div class="team__slider_appointment_title title-1 color-red">
+                            Оставить отзыв
+                        </div>
+
+                        <form>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-12 mb-4">
+                                            <label class="form-label" for="reviewsSliderName">Введите Ваше имя:</label>
+                                            <input type="text" class="form-control" id="reviewsSliderName"
+                                                   placeholder="Василий Петров" required="" tabindex="0">
+                                        </div>
+                                        <div class="col-12 mb-4">
+                                            <label class="form-label" for="reviewsSliderEmail">Email:</label>
+                                            <input type="email" class="form-control" id="reviewsSliderEmail"
+                                                   placeholder="123@mail.ru" required="" tabindex="0">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-4">
+                                    <div class="label-box">
+                                        <label class="form-label" for="reviewsSliderText">Текст отзыва:</label>
+                                        <label class="form-file">
+                                            <input type="file">
+                                            <span class="link link-grey color-grey">Прикрепить файл</span>
+                                        </label>
+                                    </div>
+                                    <textarea class="form-control" id="reviewsSliderText"></textarea>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox mb-4">
+                                            <input type="checkbox" class="custom-control-input" id="teamAppointmentAccept-1"
+                                                   required="" tabindex="0">
+                                            <label class="custom-control-label" for="teamAppointmentAccept-1">
+                                                Согласен на обработку персональных данных и с политикой конфиденциальности
+                                            </label>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-btn">
+                                        <button class="btn-2 btn-red" type="submit" tabindex="0">Отправить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+                <!-- /.container-small -->
+            </div>
+        </div>
+    </div>
 </div>
 <!-- /.reviews -->
