--- a/src/blocks/modules/services-4/services-4.html
+++ b/src/blocks/modules/services-4/services-4.html
@@ -1,64 +1,69 @@
 <div class="services-4" id="services-4">
-
-    <div class="container-small">
-        <div class="block-important">
-            <div class="title-block title-1 bg-red color-white">Вкладка</div>
-            <a href="#" class="important" data-toggle="modal" data-target=".modal-important-2">
-                <span class="important__text link link-red color-red">Важно знать</span>
-                <span class="important__icon title-1 bg-red important-red">!</span>
-            </a>
-        </div>
-    </div>
-    <!-- /.container-small -->
-
-    <div class="container">
-        <div class="services-4__block">
-
-            <div class="container-small">
-
-                <p>
-                    <span class="bold">Вкладка</span> - это микропротез, который, как и пломба, восстанавливает
-                    анатомическую форму зуба в случае его дефекта по причине кариеса или травмы.
-                </p>
-
-                <p class="bold">Основными отличиями вкладки от пломбы являются:</p>
-
-                <div class="row">
-                    <div class="col-md-3 col-lg-2">
-                        <p class="text-icon mb-4">
-                            <span class="text-icon-img title-2 color-red">1</span>
-                            <span class="d-inline-block pt-1">большая эстетика;</span>
-                        </p>
-                    </div>
-                    <div class="col-md-3 col-lg-2">
-                        <p class="text-icon mb-4">
-                            <span class="text-icon-img title-2 color-red">2</span>
-                            <span class="d-inline-block pt-1">прочность;</span>
-                        </p>
-                    </div>
-                    <div class="col-md-6 col-lg-5">
-                        <p class="text-icon mb-4">
-                            <span class="text-icon-img title-2 color-red">3</span>
-                            <span class="d-inline-block pt-1">
-                            более правильное распределение нагрузки на оставшуюся часть зуба при жевании.
-                        </span>
-                        </p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
+                    <div class="block-important">
+                        <div class="title-block title-1 bg-red color-white">Вкладка</div>
+                        <a href="#" class="important" data-toggle="modal" data-target=".modal-important-2">
+                            <span class="important__text link link-red color-red">Важно знать</span>
+                            <span class="important__icon title-1 bg-red important-red">!</span>
+                        </a>
                     </div>
                 </div>
+                <!-- /.container-small -->
 
-                <p>
-                    Последнее особенно важно, так как в значительной мере исключает отлом стенок и перелом зуба, которые
-                    нередки при пломбировании больших полостей. Вкладки могут быть изготовлены из различных материалов:
-                    металлический сплав, керамика или композит.
-                </p>
+                <div class="container">
+                    <div class="services-4__block">
 
+                        <div class="container-small">
+
+                            <p>
+                                <span class="bold">Вкладка</span> - это микропротез, который, как и пломба, восстанавливает
+                                анатомическую форму зуба в случае его дефекта по причине кариеса или травмы.
+                            </p>
+
+                            <p class="bold">Основными отличиями вкладки от пломбы являются:</p>
+
+                            <div class="row">
+                                <div class="col-md-3 col-lg-2">
+                                    <p class="text-icon mb-4">
+                                        <span class="text-icon-img title-2 color-red">1</span>
+                                        <span class="d-inline-block pt-1">большая эстетика;</span>
+                                    </p>
+                                </div>
+                                <div class="col-md-3 col-lg-2">
+                                    <p class="text-icon mb-4">
+                                        <span class="text-icon-img title-2 color-red">2</span>
+                                        <span class="d-inline-block pt-1">прочность;</span>
+                                    </p>
+                                </div>
+                                <div class="col-md-6 col-lg-5">
+                                    <p class="text-icon mb-4">
+                                        <span class="text-icon-img title-2 color-red">3</span>
+                                        <span class="d-inline-block pt-1">
+                            более правильное распределение нагрузки на оставшуюся часть зуба при жевании.
+                        </span>
+                                    </p>
+                                </div>
+                            </div>
+
+                            <p>
+                                Последнее особенно важно, так как в значительной мере исключает отлом стенок и перелом зуба, которые
+                                нередки при пломбировании больших полостей. Вкладки могут быть изготовлены из различных материалов:
+                                металлический сплав, керамика или композит.
+                            </p>
+
+                        </div>
+                        <!-- /.container-small -->
+
+                    </div>
+                    <!-- /.services-4__block -->
+                </div>
+                <!-- /.container -->
             </div>
-            <!-- /.container-small -->
-
         </div>
-        <!-- /.services-4__block -->
     </div>
-    <!-- /.container -->
 
 </div>
 <!-- /.services-4 -->
