--- a/src/blocks/modules/services-7/services-7.html
+++ b/src/blocks/modules/services-7/services-7.html
@@ -1,94 +1,99 @@
 <div class="services-7">
-
-    <div class="container-small">
-
-        <div class="title-1 color-red">Наши специалисты</div>
-
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6">
-                <div class="section-3__img">
-                    <img src="../../../img/people/man.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-6">
-
-                <div class="title-2">Олег Альбертович Гаврилов </div>
-                <div class="color-grey mb-5">
-                    Главный врач. Стоматолог-хирург-пародонтолог-имплантолог высшей категории. Стаж 14 лет
-                </div>
-
-                <p class="text-icon">
-                    <span class="text-icon-img">
-                        <span class="text-check check-red"></span>
-                    </span>
-                    Кандидат медицинских наук
-                </p>
-                <p class="text-icon">
-                    <span class="text-icon-img">
-                        <span class="text-check check-red"></span>
-                    </span>
-                    Ведет практику с 2005 г.
-                </p>
-                <p class="text-icon">
-                    <span class="text-icon-img">
-                        <span class="text-check check-red"></span>
-                    </span>
-                    Проходила курсы по имплантации, челюстно-лицевой хирургии в Швейцарии, Германии и Китае
-                </p>
-
-                <div class="text-center mt-4">
-                    <a href="/" class="link link-red color-red">Смотреть подробнее</a>
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-    <!-- /.container-small -->
-
-    <div class="services-7__form">
-        <div class="container">
-            <div class="form__block">
+            <div class="col-xl-10 offset-xl-2">
                 <div class="container-small">
 
-                    <div class="title-1 color-red">Задайте вопрос или запишитесь</div>
+                    <div class="title-1 color-red">Наши специалисты</div>
 
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6 col-xl-4 mb-4">
-                                <label class="form-label" for="services7Name">Введите Ваше имя:</label>
-                                <input type="text" class="form-control" id="services7Name" placeholder="Василий Петров" required="">
-                            </div>
-                            <div class="col-md-6 col-xl-4 mb-4">
-                                <label class="form-label" for="services7Phone">Телефон:</label>
-                                <input type="tel" class="form-control" id="services7Phone" placeholder="+7 (___) ___-____" required="">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="section-3__img">
+                                <img src="../../../img/people/man.png" alt="">
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6 col-xl-4">
-                                <div class="custom-control custom-checkbox mb-4">
-                                    <input type="checkbox" class="custom-control-input" id="services7Accept" required="">
-                                    <label class="custom-control-label" for="services7Accept">
-                                        Согласен на обработку персональных данных и с политикой конфиденциальности
-                                    </label>
+                        <div class="col-md-6">
 
-                                </div>
+                            <div class="title-2">Олег Альбертович Гаврилов </div>
+                            <div class="color-grey mb-5">
+                                Главный врач. Стоматолог-хирург-пародонтолог-имплантолог высшей категории. Стаж 14 лет
                             </div>
-                            <div class="col-md-6 col-xl-4">
-                                <div class="form-btn">
-                                    <button class="btn-2 btn-red" type="submit">Отправить</button>
-                                </div>
+
+                            <p class="text-icon">
+                    <span class="text-icon-img">
+                        <span class="text-check check-red"></span>
+                    </span>
+                                Кандидат медицинских наук
+                            </p>
+                            <p class="text-icon">
+                    <span class="text-icon-img">
+                        <span class="text-check check-red"></span>
+                    </span>
+                                Ведет практику с 2005 г.
+                            </p>
+                            <p class="text-icon">
+                    <span class="text-icon-img">
+                        <span class="text-check check-red"></span>
+                    </span>
+                                Проходила курсы по имплантации, челюстно-лицевой хирургии в Швейцарии, Германии и Китае
+                            </p>
+
+                            <div class="text-center mt-4">
+                                <a href="/" class="link link-red color-red">Смотреть подробнее</a>
                             </div>
+
                         </div>
-                    </form>
+                    </div>
 
                 </div>
                 <!-- /.container-small -->
+
+                <div class="services-7__form">
+                    <div class="container">
+                        <div class="form__block">
+                            <div class="container-small">
+
+                                <div class="title-1 color-red">Задайте вопрос или запишитесь</div>
+
+                                <form>
+                                    <div class="row">
+                                        <div class="col-md-6 col-xl-4 mb-4">
+                                            <label class="form-label" for="services7Name">Введите Ваше имя:</label>
+                                            <input type="text" class="form-control" id="services7Name" placeholder="Василий Петров" required="">
+                                        </div>
+                                        <div class="col-md-6 col-xl-4 mb-4">
+                                            <label class="form-label" for="services7Phone">Телефон:</label>
+                                            <input type="tel" class="form-control" id="services7Phone" placeholder="+7 (___) ___-____" required="">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 col-xl-4">
+                                            <div class="custom-control custom-checkbox mb-4">
+                                                <input type="checkbox" class="custom-control-input" id="services7Accept" required="">
+                                                <label class="custom-control-label" for="services7Accept">
+                                                    Согласен на обработку персональных данных и с политикой конфиденциальности
+                                                </label>
+
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xl-4">
+                                            <div class="form-btn">
+                                                <button class="btn-2 btn-red" type="submit">Отправить</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+
+                            </div>
+                            <!-- /.container-small -->
+                        </div>
+                    </div>
+                    <!-- /.container -->
+                </div>
+                <!-- /.services-7__form -->
             </div>
         </div>
-        <!-- /.container -->
     </div>
-    <!-- /.services-7__form -->
 
 </div>
 <!-- /.services-7 -->
