--- a/src/blocks/modules/home-3/home-3.html
+++ b/src/blocks/modules/home-3/home-3.html
@@ -2,81 +2,87 @@
 
     <div class="overflow-blue"></div>
 
-    <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-        <div class="title-1 cards__title color-white">ШАГ 2: Найдите СВОЕГО врача</div>
+                    <div class="title-1 cards__title color-white">ШАГ 2: Найдите СВОЕГО врача</div>
 
-        <div class="cards__desc color-white">
-            В стоматологической клинике «Дантист» Вы найдете настоящих специалистов по направлениям:
+                    <div class="cards__desc color-white">
+                        В стоматологической клинике «Дантист» Вы найдете настоящих специалистов по направлениям:
+                    </div>
+
+                    <div class="row cards__slider">
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-2 cards__top">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-3__icon-1.svg" alt="">
+                                </div>
+                                <div class="cards__text">Терпевтическая стоматология</div>
+                                <div class="cards__price">от 170 руб.</div>
+                            </div>
+
+                            <div class="cards__item cards-2 cards__bot">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-3__icon-2.svg" alt="">
+                                </div>
+                                <div class="cards__text">Ортопедическая стоматология</div>
+                                <div class="cards__price">от 7000 руб.</div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-2 cards__top">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-3__icon-3.svg" alt="">
+                                </div>
+                                <div class="cards__text">Хирургическая стоматология</div>
+                                <div class="cards__price">от 1200 руб.</div>
+                            </div>
+
+                            <div class="cards__item cards-2 cards__bot">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-3__icon-4.svg" alt="">
+                                </div>
+                                <div class="cards__text">Отбеливание зубов</div>
+                                <div class="cards__price">от 4000 руб.</div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-4">
+
+                            <div class="cards__item cards-2 cards__top">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-3__icon-5.svg" alt="">
+                                </div>
+                                <div class="cards__text">Имплантология</div>
+                                <div class="cards__price">от 4500 руб.</div>
+                            </div>
+
+                            <div class="cards__item cards-2 cards__bot">
+                                <div class="cards__img">
+                                    <img src="../../../img/svg/home-3__icon-6.svg" alt="">
+                                </div>
+                                <div class="cards__text">Отбеливание зубов</div>
+                                <div class="cards__price">от 1800 руб.</div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- /.row -->
+
+                </div>
+                <!-- /.container-small -->
+            </div>
         </div>
-
-        <div class="row cards__slider">
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-2 cards__top">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-3__icon-1.svg" alt="">
-                    </div>
-                    <div class="cards__text">Терпевтическая стоматология</div>
-                    <div class="cards__price">от 170 руб.</div>
-                </div>
-
-                <div class="cards__item cards-2 cards__bot">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-3__icon-2.svg" alt="">
-                    </div>
-                    <div class="cards__text">Ортопедическая стоматология</div>
-                    <div class="cards__price">от 7000 руб.</div>
-                </div>
-
-            </div>
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-2 cards__top">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-3__icon-3.svg" alt="">
-                    </div>
-                    <div class="cards__text">Хирургическая стоматология</div>
-                    <div class="cards__price">от 1200 руб.</div>
-                </div>
-
-                <div class="cards__item cards-2 cards__bot">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-3__icon-4.svg" alt="">
-                    </div>
-                    <div class="cards__text">Отбеливание зубов</div>
-                    <div class="cards__price">от 4000 руб.</div>
-                </div>
-
-            </div>
-
-            <div class="col-md-4">
-
-                <div class="cards__item cards-2 cards__top">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-3__icon-5.svg" alt="">
-                    </div>
-                    <div class="cards__text">Имплантология</div>
-                    <div class="cards__price">от 4500 руб.</div>
-                </div>
-
-                <div class="cards__item cards-2 cards__bot">
-                    <div class="cards__img">
-                        <img src="../../../img/svg/home-3__icon-6.svg" alt="">
-                    </div>
-                    <div class="cards__text">Отбеливание зубов</div>
-                    <div class="cards__price">от 1800 руб.</div>
-                </div>
-
-            </div>
-
-        </div>
-        <!-- /.row -->
-
     </div>
-    <!-- /.container-small -->
 
 </div>
 <!-- /.home-3 -->
