--- a/src/blocks/modules/services-1/services-1.html
+++ b/src/blocks/modules/services-1/services-1.html
@@ -1,64 +1,78 @@
 <div class="services-1" id="services-1">
-    <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-        <div class="block-important">
-            <div class="title-block title-1 bg-blue color-white">Эстетические реставрации</div>
-            <a href="#" class="important" data-toggle="modal" data-target=".modal-important-1">
-                <span class="important__text link link-blue">Важно знать</span>
-                <span class="important__icon title-1 bg-blue important-blue">!</span>
-            </a>
-        </div>
-
-        <div class="column-2">
-            <p>
-                <span class="bold">Прямые</span> – результат моделирования зуба непосредственно в полости рта на приеме у
-                стоматолога. Для этого
-                используется фотополимерный материал – композит, который отверждается специальной лампой. Главные
-                преимущества таких реставраций – экономия времени и средств пациента.
-            </p>
-            <p>
-                <span class="bold">Непрямые реставрации</span> создаются на модели в лаборатории зубным техником, поэтому результат – готовый красивый
-                зуб – пациент получает не сразу. Материалом в данном случае служит чаще всего керамика.
-            </p>
-        </div>
-
-        <div class="works-slider">
-            <div class="works-slider__item">
-                <div class="row">
-                    <div class="col-sm-6 mb-4 mb-sm-0">
-                        <a data-fancybox href="../../../img/works/before-1.jpg" class="works-slider__item_link">
-                            <img src="../../../img/works/before-1.jpg" alt="">
-                            <span class="works-slider__item_link_overflow overflow-blue color-white">До лечения</span>
+                    <div class="block-important">
+                        <div class="title-block title-1 bg-blue color-white">Эстетические реставрации</div>
+                        <a href="#" class="important" data-toggle="modal" data-target=".modal-important-1">
+                            <span class="important__text link link-blue">Важно знать</span>
+                            <span class="important__icon title-1 bg-blue important-blue">!</span>
                         </a>
                     </div>
-                    <div class="col-sm-6 mb-4 mb-sm-0">
-                        <a data-fancybox href="../../../img/works/after-1.jpg" class="works-slider__item_link">
-                            <img src="../../../img/works/after-1.jpg" alt="">
-                            <span class="works-slider__item_link_overflow overflow-blue color-white">После лечения</span>
-                        </a>
+
+                    <div class="column-2">
+                        <p>
+                            <span class="bold">Прямые</span> – результат моделирования зуба непосредственно в полости рта на приеме у
+                            стоматолога. Для этого
+                            используется фотополимерный материал – композит, который отверждается специальной лампой. Главные
+                            преимущества таких реставраций – экономия времени и средств пациента.
+                        </p>
+                        <p>
+                            <span class="bold">Непрямые реставрации</span> создаются на модели в лаборатории зубным техником, поэтому результат – готовый красивый
+                            зуб – пациент получает не сразу. Материалом в данном случае служит чаще всего керамика.
+                        </p>
                     </div>
+
                 </div>
-            </div>
-            <div class="works-slider__item">
-                <div class="row">
-                    <div class="col-sm-6 mb-4 mb-sm-0">
-                        <a data-fancybox href="../../../img/works/before-1.jpg" class="works-slider__item_link">
-                            <img src="../../../img/works/before-1.jpg" alt="">
-                            <span class="works-slider__item_link_overflow overflow-blue color-white">До лечения</span>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 mb-4 mb-sm-0">
-                        <a data-fancybox href="../../../img/works/after-1.jpg" class="works-slider__item_link">
-                            <img src="../../../img/works/after-1.jpg" alt="">
-                            <span class="works-slider__item_link_overflow overflow-blue color-white">После лечения</span>
-                        </a>
-                    </div>
-                </div>
+                <!-- /.container-small -->
             </div>
         </div>
-        <!-- /.works-slider -->
-
     </div>
-    <!-- /.container-small -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-8 offset-xl-3">
+                <div class="container-small">
+                    <div class="works-slider">
+                        <div class="works-slider__item">
+                            <div class="row">
+                                <div class="col-sm-6 mb-4 mb-sm-0">
+                                    <a data-fancybox href="../../../img/works/before-1.jpg" class="works-slider__item_link">
+                                        <img src="../../../img/works/before-1.jpg" alt="">
+                                        <span class="works-slider__item_link_overflow overflow-blue color-white">До лечения</span>
+                                    </a>
+                                </div>
+                                <div class="col-sm-6 mb-4 mb-sm-0">
+                                    <a data-fancybox href="../../../img/works/after-1.jpg" class="works-slider__item_link">
+                                        <img src="../../../img/works/after-1.jpg" alt="">
+                                        <span class="works-slider__item_link_overflow overflow-blue color-white">После лечения</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="works-slider__item">
+                            <div class="row">
+                                <div class="col-sm-6 mb-4 mb-sm-0">
+                                    <a data-fancybox href="../../../img/works/before-1.jpg" class="works-slider__item_link">
+                                        <img src="../../../img/works/before-1.jpg" alt="">
+                                        <span class="works-slider__item_link_overflow overflow-blue color-white">До лечения</span>
+                                    </a>
+                                </div>
+                                <div class="col-sm-6 mb-4 mb-sm-0">
+                                    <a data-fancybox href="../../../img/works/after-1.jpg" class="works-slider__item_link">
+                                        <img src="../../../img/works/after-1.jpg" alt="">
+                                        <span class="works-slider__item_link_overflow overflow-blue color-white">После лечения</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.works-slider -->
+                </div>
+                <!-- /.container-small -->
+            </div>
+        </div>
+    </div>
 </div>
 <!-- /.services-1 -->
