--- a/src/blocks/modules/services-11/services-11.html
+++ b/src/blocks/modules/services-11/services-11.html
@@ -1,92 +1,97 @@
 <div class="services-11">
-
-    <div class="container-small">
-
-        <div class="title-1 color-blue">Наши специалисты</div>
-
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6">
-                <div class="section-3__img">
-                    <img src="../../../img/people/woman.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-6">
-
-                <div class="title-2">Виолетта Викторовна Скобелкина </div>
-                <div class="color-grey mb-5">Стоматолог-хирург, имплантолог. Стаж 14 лет</div>
-
-                <p class="text-icon">
-                    <span class="text-icon-img">
-                        <span class="text-check check-blue"></span>
-                    </span>
-                    Кандидат медицинских наук
-                </p>
-                <p class="text-icon">
-                    <span class="text-icon-img">
-                        <span class="text-check check-blue"></span>
-                    </span>
-                    Ведет практику с 2005 г.
-                </p>
-                <p class="text-icon">
-                    <span class="text-icon-img">
-                        <span class="text-check check-blue"></span>
-                    </span>
-                    Проходила курсы по имплантации, челюстно-лицевой хирургии в Швейцарии, Германии и Китае
-                </p>
-
-                <div class="text-center mt-4">
-                    <a href="/" class="link link-blue color-blue">Смотреть подробнее</a>
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-    <!-- /.container-small -->
-
-    <div class="services-11__form">
-        <div class="container">
-            <div class="form__block">
+            <div class="col-xl-10 offset-xl-2">
                 <div class="container-small">
 
-                    <div class="title-1 color-blue">Задайте вопрос или запишитесь</div>
+                    <div class="title-1 color-blue">Наши специалисты</div>
 
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6 col-xl-4 mb-4">
-                                <label class="form-label" for="services11Name">Введите Ваше имя:</label>
-                                <input type="text" class="form-control" id="services11Name" placeholder="Василий Петров" required="">
-                            </div>
-                            <div class="col-md-6 col-xl-4 mb-4">
-                                <label class="form-label" for="services11Phone">Телефон:</label>
-                                <input type="tel" class="form-control" id="services11Phone" placeholder="+7 (___) ___-____" required="">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="section-3__img">
+                                <img src="../../../img/people/woman.png" alt="">
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6 col-xl-4">
-                                <div class="custom-control custom-checkbox mb-4">
-                                    <input type="checkbox" class="custom-control-input" id="services11Accept" required="">
-                                    <label class="custom-control-label" for="services11Accept">
-                                        Согласен на обработку персональных данных и с политикой конфиденциальности
-                                    </label>
+                        <div class="col-md-6">
 
-                                </div>
+                            <div class="title-2">Виолетта Викторовна Скобелкина </div>
+                            <div class="color-grey mb-5">Стоматолог-хирург, имплантолог. Стаж 14 лет</div>
+
+                            <p class="text-icon">
+                    <span class="text-icon-img">
+                        <span class="text-check check-blue"></span>
+                    </span>
+                                Кандидат медицинских наук
+                            </p>
+                            <p class="text-icon">
+                    <span class="text-icon-img">
+                        <span class="text-check check-blue"></span>
+                    </span>
+                                Ведет практику с 2005 г.
+                            </p>
+                            <p class="text-icon">
+                    <span class="text-icon-img">
+                        <span class="text-check check-blue"></span>
+                    </span>
+                                Проходила курсы по имплантации, челюстно-лицевой хирургии в Швейцарии, Германии и Китае
+                            </p>
+
+                            <div class="text-center mt-4">
+                                <a href="/" class="link link-blue color-blue">Смотреть подробнее</a>
                             </div>
-                            <div class="col-md-6 col-xl-4">
-                                <div class="form-btn">
-                                    <button class="btn-2 btn-blue" type="submit">Отправить</button>
-                                </div>
-                            </div>
+
                         </div>
-                    </form>
+                    </div>
 
                 </div>
                 <!-- /.container-small -->
+
+                <div class="services-11__form">
+                    <div class="container">
+                        <div class="form__block">
+                            <div class="container-small">
+
+                                <div class="title-1 color-blue">Задайте вопрос или запишитесь</div>
+
+                                <form>
+                                    <div class="row">
+                                        <div class="col-md-6 col-xl-4 mb-4">
+                                            <label class="form-label" for="services11Name">Введите Ваше имя:</label>
+                                            <input type="text" class="form-control" id="services11Name" placeholder="Василий Петров" required="">
+                                        </div>
+                                        <div class="col-md-6 col-xl-4 mb-4">
+                                            <label class="form-label" for="services11Phone">Телефон:</label>
+                                            <input type="tel" class="form-control" id="services11Phone" placeholder="+7 (___) ___-____" required="">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 col-xl-4">
+                                            <div class="custom-control custom-checkbox mb-4">
+                                                <input type="checkbox" class="custom-control-input" id="services11Accept" required="">
+                                                <label class="custom-control-label" for="services11Accept">
+                                                    Согласен на обработку персональных данных и с политикой конфиденциальности
+                                                </label>
+
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xl-4">
+                                            <div class="form-btn">
+                                                <button class="btn-2 btn-blue" type="submit">Отправить</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+
+                            </div>
+                            <!-- /.container-small -->
+                        </div>
+                    </div>
+                    <!-- /.container -->
+                </div>
+                <!-- /.services-11__form -->
             </div>
         </div>
-        <!-- /.container -->
     </div>
-    <!-- /.services-11__form -->
 
 </div>
 <!-- /.services-11 -->
