--- a/src/blocks/modules/services-13/services-13.html
+++ b/src/blocks/modules/services-13/services-13.html
@@ -1,58 +1,64 @@
 <div class="clinic-form">
     <div class="overflow-blue"></div>
-    <div class="container">
-        <div class="form__block">
-            <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container">
+                    <div class="form__block">
+                        <div class="container-small">
 
-                <div class="title-1">Записаться на прием</div>
+                            <div class="title-1">Записаться на прием</div>
 
-                <form>
-                    <div class="row">
-                        <div class="col-md-6 col-xl-4 mb-4">
-                            <label class="form-label" for="services13Name">Введите Ваше имя:</label>
-                            <input type="text" class="form-control" id="services13Name" placeholder="Василий Петров" required="">
-                        </div>
-                        <div class="col-md-6 col-xl-4 mb-4">
-                            <label class="form-label" for="services13Phone">Телефон:</label>
-                            <input type="tel" class="form-control" id="services13Phone" placeholder="+7 (___) ___-____" required="">
-                        </div>
-                    </div>
-                    <div class="form-label form-appointment-label">Удобное время посещения</div>
-                    <div class="row">
-                        <div class="col-md-6 col-xl-4 mb-4">
-                            <div class="form-appointment">
-                                <div class="form-time">
-                                    <input type="text" class="form-control" id="services13Hours-1" placeholder="17" tabindex="0">
-                                    <label class="form-label" for="services13Hours-1">часов</label>
+                            <form>
+                                <div class="row">
+                                    <div class="col-md-6 col-xl-4 mb-4">
+                                        <label class="form-label" for="services13Name">Введите Ваше имя:</label>
+                                        <input type="text" class="form-control" id="services13Name" placeholder="Василий Петров" required="">
+                                    </div>
+                                    <div class="col-md-6 col-xl-4 mb-4">
+                                        <label class="form-label" for="services13Phone">Телефон:</label>
+                                        <input type="tel" class="form-control" id="services13Phone" placeholder="+7 (___) ___-____" required="">
+                                    </div>
                                 </div>
-                                <div class="form-time">
-                                    <input type="text" class="form-control" id="services13Minutes-1" placeholder="00" tabindex="0">
-                                    <label class="form-label" for="services13Minutes-1">минут</label>
+                                <div class="form-label form-appointment-label">Удобное время посещения</div>
+                                <div class="row">
+                                    <div class="col-md-6 col-xl-4 mb-4">
+                                        <div class="form-appointment">
+                                            <div class="form-time">
+                                                <input type="text" class="form-control" id="services13Hours-1" placeholder="17" tabindex="0">
+                                                <label class="form-label" for="services13Hours-1">часов</label>
+                                            </div>
+                                            <div class="form-time">
+                                                <input type="text" class="form-control" id="services13Minutes-1" placeholder="00" tabindex="0">
+                                                <label class="form-label" for="services13Minutes-1">минут</label>
+                                            </div>
+                                            <div class="form-date">
+                                                <input type="text" class="form-control" id="services13Date-1" placeholder="21 мая" tabindex="0">
+                                                <label class="form-label" for="services13Date-1">число</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-xl-4 mb-4">
+                                        <div class="form-btn">
+                                            <button class="btn-2 btn-red" type="submit">Отправить</button>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-date">
-                                    <input type="text" class="form-control" id="services13Date-1" placeholder="21 мая" tabindex="0">
-                                    <label class="form-label" for="services13Date-1">число</label>
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input" id="services13Accept" required="">
+                                    <label class="custom-control-label" for="services13Accept">
+                                        Согласен на обработку персональных данных и с политикой конфиденциальности
+                                    </label>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-4 mb-4">
-                            <div class="form-btn">
-                                <button class="btn-2 btn-red" type="submit">Отправить</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="services13Accept" required="">
-                        <label class="custom-control-label" for="services13Accept">
-                            Согласен на обработку персональных данных и с политикой конфиденциальности
-                        </label>
-                    </div>
-                </form>
+                            </form>
 
+                        </div>
+                        <!-- /.container-small -->
+                    </div>
+                    <!-- /.form__block -->
+                </div>
+                <!-- /.container -->
             </div>
-            <!-- /.container-small -->
         </div>
-        <!-- /.form__block -->
     </div>
-    <!-- /.container -->
 </div>
