--- a/src/blocks/modules/services-2/services-2.html
+++ b/src/blocks/modules/services-2/services-2.html
@@ -1,28 +1,34 @@
 <div class="services-2">
-    <div class="container-small">
-
-        <div class="title-1 color-blue">Мы гарантируем</div>
-
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-7">
-                <p>
-                    Состояние выполненных эстетических реставраций во многом зависит от гигиены полости рта пациента,
-                    наличия или отсутствия вредных привычек (курение, частое употребление красных вин, привычка грызть
-                    предметы и т.п.). Мы рекомендуем посещение клиники 2 раза в год с целью полировки выполненных
-                    реставраций и прохождения профессиональной гигиены.
-                </p>
-                <p>
-                    При выполнении данных условий гарантийный срок составляет 3 года, а служат реставрации до 7 лет.
-                </p>
-            </div>
-            <div class="col-md-5">
-                <div class="services-2__img">
-                    <img src="../../../img/icons/guarantee.png" alt="">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
+
+                    <div class="title-1 color-blue">Мы гарантируем</div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <p>
+                                Состояние выполненных эстетических реставраций во многом зависит от гигиены полости рта пациента,
+                                наличия или отсутствия вредных привычек (курение, частое употребление красных вин, привычка грызть
+                                предметы и т.п.). Мы рекомендуем посещение клиники 2 раза в год с целью полировки выполненных
+                                реставраций и прохождения профессиональной гигиены.
+                            </p>
+                            <p>
+                                При выполнении данных условий гарантийный срок составляет 3 года, а служат реставрации до 7 лет.
+                            </p>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="services-2__img">
+                                <img src="../../../img/icons/guarantee.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
+                <!-- /.container-small -->
             </div>
         </div>
-
     </div>
-    <!-- /.container-small -->
 </div>
 <!-- /.services-2 -->
