--- a/src/blocks/modules/services-8/services-8.html
+++ b/src/blocks/modules/services-8/services-8.html
@@ -1,29 +1,35 @@
 <div class="services-8" id="services-8">
-    <div class="container-small">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-10 offset-xl-2">
+                <div class="container-small">
 
-        <div class="block-important">
-            <div class="title-block title-1 bg-blue color-white">Керамические виниры</div>
-            <a href="#" class="important" data-toggle="modal" data-target=".modal-important-3">
-                <span class="important__text link link-blue">Важно знать</span>
-                <span class="important__icon title-1 bg-blue important-blue">!</span>
-            </a>
+                    <div class="block-important">
+                        <div class="title-block title-1 bg-blue color-white">Керамические виниры</div>
+                        <a href="#" class="important" data-toggle="modal" data-target=".modal-important-3">
+                            <span class="important__text link link-blue">Важно знать</span>
+                            <span class="important__icon title-1 bg-blue important-blue">!</span>
+                        </a>
+                    </div>
+
+                    <p>
+                        <span class="bold">Керамические виниры</span> - это тонкие, толщиной всего до 0,8 мм (!!!), керамические пластинки, которые фиксируют
+                        на переднюю поверхность зубов с целью улучшения эстетики (облицовки зубов).
+                    </p>
+
+                    <p>
+                        Делаются такие облицовки индивидуально зубным техником в лаборатории по слепкам обработанных зубов.
+                    </p>
+
+                    <p>
+                        Появление принципиально новых технологий изготовления виниров и рост эстетических потребностей пациентов
+                        привели к все большему применению керамических виниров в стоматологической практике.
+                    </p>
+
+                </div>
+                <!-- /.container-small -->
+            </div>
         </div>
-
-        <p>
-            <span class="bold">Керамические виниры</span> - это тонкие, толщиной всего до 0,8 мм (!!!), керамические пластинки, которые фиксируют
-            на переднюю поверхность зубов с целью улучшения эстетики (облицовки зубов).
-        </p>
-
-        <p>
-            Делаются такие облицовки индивидуально зубным техником в лаборатории по слепкам обработанных зубов.
-        </p>
-
-        <p>
-            Появление принципиально новых технологий изготовления виниров и рост эстетических потребностей пациентов
-            привели к все большему применению керамических виниров в стоматологической практике.
-        </p>
-
     </div>
-    <!-- /.container-small -->
 </div>
 <!-- /.services-8 -->
