--- a/src/blocks/modules/team/team.html
+++ b/src/blocks/modules/team/team.html
@@ -74,7 +74,10 @@
                                 <div class="col-md-6 col-lg-7 mb-3 mb-lg-0 order-2 order-lg-3">
                                     <div class="team__slider_info">
                                         <div class="team__slider_info_name title-2">Антон Игоревич <br> Ворончихин</div>
-                                        <div class="team__slider_info_position">Директор</div>
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <div class="team__slider_info_position">Директор</div>
+                                            <a href="#" class="link link-blue color-blue">Сертификаты</a>
+                                        </div>
                                         <ul class="team__slider_info_list">
                                             <li class="team__slider_info_list_item">
                                                 <img class="team__slider_info_list_item_check" src="../../../img/svg/checked-blue.svg"
@@ -207,7 +210,10 @@
                                 <div class="col-md-6 col-lg-7 mb-3 mb-lg-0 order-2 order-lg-3">
                                     <div class="team__slider_info">
                                         <div class="team__slider_info_name title-2">Антон Игоревич <br> Ворончихин</div>
-                                        <div class="team__slider_info_position">Директор</div>
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <div class="team__slider_info_position">Директор</div>
+                                            <a href="#" class="link link-blue color-blue">Сертификаты</a>
+                                        </div>
                                         <ul class="team__slider_info_list">
                                             <li class="team__slider_info_list_item">
                                                 <img class="team__slider_info_list_item_check" src="../../../img/svg/checked-blue.svg"
